tests/models/enum/unit/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
   #[field(alias = 1)]
    Value
}
fn main() {}
